2008-11-07  Matthew Allum  <mallum@linux.intel.com>

	* clutter/clutter-actor.c:
	* clutter/clutter-actor.h:
	* clutter/clutter-clone-texture.c:
	* clutter/clutter-private.h:
	* clutter/clutter-texture.c:
	* clutter/x11/clutter-x11-texture-pixmap.c:
        
        Attempt to lower overhead of updating TFP's (particularly mipmaped).
        Compresses mipmap updates only for visible TFPs.
        Avoiding updates for non visible TFP's whilst keeping visible
        clones working ok.

2008-11-06  Neil Roberts  <neil@linux.intel.com>

	Bug 1230 - Pick fails on low precision color buffers

	* clutter/clutter-main.c (_clutter_id_to_color): When using fuzzy
	picking to pick a color for an actor, it would previously set the
	fuzzy bit and then all but the most significant of the remaining
	unused bits. This meant that for 16-bit displays it would end up
	with a strange pattern for the unused bits like 1011 which could
	cause it to round up. Now it just sets all but the most
	significant of all of the unused bits giving a pattern like
	0111. Thanks to Guy Zadickario for the patch.

2008-11-06  Neil Roberts  <neil@linux.intel.com>

	* clutter/cogl/gles/cogl.c (cogl_perspective): 
	* clutter/cogl/common/cogl-fixed.c (cogl_fixed_sin)
	(cogl_angle_sin, cogl_angle_tan, cogl_fixed_sqrt): Replaced uses
	of 1 + ~x with just -x which is equivalent and easier to
	understand.

2008-11-06  Emmanuele Bassi  <ebassi@linux.intel.com>

	Bug 1233 - CLUTTER_ALPHA_SINE_INC is broken in trunk

	* clutter/clutter-alpha.c: Fix a rollover in the sine functions.

2008-11-05  Neil Roberts  <neil@linux.intel.com>

	* clutter/clutter-color.c (clutter_color_new): Remove CLAMP macros
	around the component parameters because they are guint8 anyway so
	the CLAMP is redundant and it causes a warning.

2008-11-04  Thomas Wood  <thomas@linux.intel.com>

	* clutter/clutter-color.c: Update ClutterColor documentation as
	changes have been backported to 0.8.4.
